--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
-cmake_minimum_required(VERSION 2.8.4)
-project(Config)
+cmake_minimum_required(VERSION 2.8)
 
-set(SOURCE_FILES main.cpp)
-add_executable(Config ${SOURCE_FILES})
+project (Config)
+set(CMAKE_BUILD_TYPE Release)
+set(SOURCES src/Config.cpp)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
+add_library(Config SHARED ${SOURCES})
