--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,6 @@ set(CMAKE_BUILD_TYPE Release)
 set(SOURCES src/Config.cpp)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 add_library(Config SHARED ${SOURCES})
+enable_testing()
+
+add_executable(TEST test/test.cpp)
