--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,14 @@ set(CMAKE_BUILD_TYPE Release)
 set(SOURCES 
     src/Config.cpp
 )
-
+set(Boost_USE_STATIC_LIBS OFF)
+set(Boost_USE_MULTITHREADED ON)
+set(Boost_USE_STATIC_RUNTIME OFF)
+set(Boost_NAMESPACE "")
+find_package(Boost REQUIRED)
+include_directories(${Boost_INCLUDE_DIRS})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 add_library(Config SHARED ${SOURCES})
 enable_testing()
 
-add_executable(TEST test/test.cpp)
+add_executable(Test test/test.cpp)
